<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about_alc">AboutALC</string>
    <string name="title_activity_myprofile">myprofile</string>

    <string name="MyName">Anthony Larbi </string>
    <string name="Description">A profile image of Anthony Larbi </string>

    <string name="Track">Track: </string>
    <string name="Country">Country: </string>
    <string name="Email">Email: </string>
    <string name="PhoneNumber">Phone Number: </string>
    <string name="SlackUserName">Slack UserName: </string>



    <string name="TrackValue">Android</string>
    <string name="CountryValue">Ghana</string>
    <string name="EmailValue">anthonylarbi@outlook.com</string>
    <string name="PhoneNumberValue">0245008059</string>
    <string name="SlackUserNameValue">theminister</string>


</resources>
